# Petri

./: CMakeLists.txt
inc/glad/: glad.h
lib/: glfw3.lib
petri_log/: petri_loader.cpp  petri_net.h  petri_state.cpp  petri_state.h  reachability_graph.cpp  reachability_graph.h  reachability_graph_renderer.cpp  reachability_graph_renderer.h  rg_loader.cpp  rg_loader.h
src/: glad.c  main.cpp
src/core/: TimeGL.cpp  TimeGL.h  Window.cpp  Window.h
src/geometry/: ContainerSphere.h  Grid.cpp  Grid.h  Line.cpp  Line.h  Shape.h  Sphere.cpp  Sphere.h
src/graphics/: Camera.cpp  Camera.h  EBO.cpp  VAO.cpp  VAO.h  VBO.h  reachability_graph_renderer.cpp  reachability_graph_renderer.h
src/petriGraph/: PetriArc.cpp  PetriArc.h  PetriGraph.cpp  PetriGraph.h  PetriPlace.cpp  PetriPlace.h  PetriToken.cpp  PetriToken.h  PetriTransition.cpp  PetriTransition.h
src/petri_log/: petri_loader.h  reachability_graph.cpp  rg_loader.cpp  rg_loader.h
src/render/: Scene.cpp  Scene.h
src/res/: Camera.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  shaderClass.cpp  shaderClass.h
src/scene/: Scene.cpp  Scene.h
src/shaders/: default.frag  default.vert
src/shapes/: Grid.cpp  Grid.h  Line.cpp  Line.h  Shape.h  Sphere.h
